--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ layout: default
     <div class="pagination">
     {% if paginator.previous_page %}
       <a href="{{ paginator.previous_page_path | relative_url }}">
-        &laquo; Prev
+        &laquo; Назад
       </a>
     {% else %}
-      <span>&laquo; Prev</span>
+      <span>&laquo; Назад</span>
     {% endif %}
 
     {% for page in (1..paginator.total_pages) %}
@@ -69,10 +69,10 @@ layout: default
 
     {% if paginator.next_page %}
       <a href="{{ paginator.next_page_path | relative_url }}">
-        Next &raquo;
+        Вперед &raquo;
       </a>
     {% else %}
-      <span>Next &raquo;</span>
+      <span>Вперед &raquo;</span>
     {% endif %}
     </div>
     {% endif %}
